--- a/player.css
+++ b/player.css
@@ -1,87 +1,32 @@
-
+/* body 背景 */
 body {
     background-color: #D8D4C8;
 }
-.single-song {
-    color: #008080;
-    list-style: none;
-}
-.current-song {
-    color: brown;
-}
+/* 播放器容器 */
 .player-container {
-    position: relative;
+    position: fixed;
+    top: 25px;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: #F3EFE3;
     text-align: center;
     width: 300px;
     height: 470px;
-    margin: 0 auto;
      /*box shadow*/
     box-shadow: 0px 0px 9px #333333;
     -webkit-box-shadow: 0px 0px 9px #333333;
     -moz-box-shadow: 0px 0px 9px #333333;
 }
-h2#id-h2-name {
-    position: relative;
-    top: 40px;
-}
-.player-controls {
-    position: absolute;
-    bottom: 14%;
-    width: inherit;
-}
-.controls-play {
-    position: relative;
-    margin: 0 auto;
-    width: 180px;
-}
-.controls-mode {
-    position: relative;
-    bottom: 18px;
-    text-align: left;
-    width: inherit;
-    left: 20px;
-}
-.controls-slider {
-    position: relative;
-}
-.player-time {
-    position: relative;
-    bottom: 16px;
-    text-align: left;
-    color: white;
-    font-size: small;
-}
-time#id-time-duration {
-    position: absolute;
-    right: 8px;
-}
-time#id-time-current {
-    position: relative;
-    left: 8px;
-}
 
-.player-center {
-    margin: 0 auto;
-}
-.controls-prog {
-    margin: 0 auto;
-    width: 240px;
-    /*background: black;*/
-    position: relative;
-    top: -30px;
-}
-input#id-input-slider {
-    margin: 0 auto;
-    width: 240px;
-}
+
+
+/* 封面图片 */
 .player-img {
+    position: relative;
     width: 275px;
     height: 275px;
-    margin: 0px auto;
+    margin: 12.5px auto 0 auto;
     border-radius: 100%;
-    top: 12.5px;
-    position: relative;
 }
 .player-img:after{
   position:absolute;
@@ -96,6 +41,72 @@ img {
     width: 100%;
     height: 100%;
 }
+
+/* 时间 标题 演唱者 显示 */
+.player-display {
+    width: 100%;
+    height: 90px;
+}
+#id-time-remain {
+    display: inline-block;
+    text-align: left;
+    color: #E3A494;
+    font-size: 50px;
+    float: left;
+    margin: 20px 20px 20px 25px;
+}
+.audio-info {
+    display: inline-block;
+    font-size: 20px;
+    height: 50px;
+    margin: 20px auto;
+    float: left;
+    text-align: left;
+}
+#id-audio-name {
+    margin: 5px auto;
+    color: #6A6964;
+}
+#id-audio-author {
+    font-size: 10px;
+    color: #ABA79B;
+}
+
+/* slider 进度条*/
+.slider {
+    height: 20px;
+    width: 100%;
+    background-color: #E19484;
+}
+#id-slider-gone {
+    height: 100%;
+    background-color: #FFA895;
+}
+
+/* 播放控制 */
+.player-controls {
+    background-color: #5A4450;
+    height: 72px;
+}
+/*.controls-play {
+    position: relative;
+    margin: 0 auto;
+    width: 180px;
+}
+.controls-mode {
+    position: relative;
+    bottom: 18px;
+    text-align: left;
+    width: inherit;
+    left: 20px;
+}*/
+
+
+input#id-input-slider {
+    margin: 0 auto;
+    width: 240px;
+}
+
 
 button#id-button-random {
     position: absolute;
