--- a/player.css
+++ b/player.css
@@ -39,18 +39,23 @@ body {
     height: 90px;
 }
 #id-time-remain {
+    width: 125px;
+    height: 50px;
+    line-height: 50px;
+    overflow: hidden;
     display: inline-block;
-    text-align: left;
+    text-align: center;;
     color: #E3A494;
     font-size: 50px;
     float: left;
-    margin: 20px 20px 20px 25px;
+    margin: 20px 10px 20px 15px;
 }
 .audio-info {
     display: inline-block;
     font-size: 20px;
     height: 50px;
-    margin: 20px auto;
+    width: 125px;
+    margin: 20px 15px 20px 10px;
     float: left;
     text-align: left;
 }
@@ -112,7 +117,7 @@ body {
     display: inline-block;
 }
 .pause1 {
-    margin: 0 0 0 25px;
+    margin: 0px -15px 0 25px;
 }
 /* 播放按钮出现与否 */
 .display-none {
